--- a/css/main.css
+++ b/css/main.css
@@ -154,31 +154,6 @@ header {
   width: 70%;
 }
 
-.nav-button.active a {
-  -webkit-transition-delay: .225s;
-          transition-delay: .225s;
-  -webkit-transform: rotateZ(45deg);
-          transform: rotateZ(45deg);
-}
-
-.nav-button.active a:before {
-  -webkit-transition-delay: .025s;
-          transition-delay: .025s;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  background: #000000;
-}
-
-.nav-button.active a span {
-  background: #000000;
-}
-
-.nav-button.active a span:nth-child(1), .nav-button.active a span:nth-child(3) {
-  -webkit-transition-delay: 0s;
-          transition-delay: 0s;
-  width: 0;
-}
-
 .header__button {
   z-index: 2;
   width: 40px;
@@ -670,5 +645,41 @@ footer a:hover {
 
 footer i {
   margin-right: 15px;
+}
+
+.mobile-dropt {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .presentation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .mobile-dropt {
+    display: inline;
+    text-align: center;
+    font-family: 'DM Serif Text';
+  }
+  .mobile-dropt h1 {
+    font-size: 40px;
+  }
+  .text-apres {
+    text-align: center;
+  }
+  .work-with-us {
+    display: block;
+  }
+  .work-with-us .form {
+    padding: 50px;
+  }
+  .work-with-us .drop {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
