--- a/css/main.css
+++ b/css/main.css
@@ -681,5 +681,58 @@ footer i {
   .work-with-us .drop {
     display: none;
   }
+  .squares {
+    margin-top: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .squares .r-more {
+    z-index: 2;
+    width: 30%;
+  }
+  .squares .r-more a {
+    text-decoration: none;
+    color: #000000;
+  }
+  .squares .r-more div {
+    position: absolute;
+    margin: -30px 0px 0px 20px;
+    width: 0%;
+    height: 1px;
+    background-color: #000000;
+  }
+  .squares .r-more .line {
+    width: 0%;
+    -webkit-transition: all 400ms ease;
+    transition: all 400ms ease;
+    display: none;
+  }
+  .squares .r-more p {
+    display: none;
+    position: absolute;
+    font-size: 18px;
+    font-weight: 300;
+    text-decoration: none;
+    margin-top: -45px;
+    margin-left: 30px;
+    opacity: 0%;
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+    -webkit-transition-delay: 400ms;
+            transition-delay: 400ms;
+  }
+  .squares img {
+    min-width: 130%;
+    drop-shadow: -8px -8px 24px 0 #FFFFFF 8px 8px 24px 0 #AEAEC0 40%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
