--- a/css/main.scss
+++ b/css/main.scss
@@ -655,7 +655,15 @@ footer {
 	display: none;
 }
 @media screen and (max-width: 768px) {
-.presentation {
+	// .inner-cursor {
+	// 	display:none;
+	// }
+	// .outer-cursor {
+	// 	display: none;
+	// }
+
+
+	.presentation {
 	display: flex;
 	flex-direction: column;
 }
@@ -682,5 +690,68 @@ footer {
 	}
 }
 
+.squares {
+
+	margin-top: 40px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+
+	.r-more {
+		z-index: 2;
+		width: 30%;
+
+		a {
+			text-decoration: none;
+			color: #000000;
+
+
+		}
+
+		div {
+			position: absolute;
+			margin: -30px 0px 0px 20px;
+			width: 0%;
+			height: 1px;
+			background-color: #000000;
+
+		}
+
+		.line {
+			width: 0%;
+			transition: all 400ms ease;
+			display:none;
+		}
+
+		p {
+			display: none;
+			position: absolute;
+			font-size: 18px;
+			font-weight: 300;
+			text-decoration: none;
+			margin-top: -45px;
+			margin-left: 30px;
+			opacity: 0%;
+			transition: all 300ms ease;
+			transition-delay: 400ms;
+		}
+
 	
+
+	}
+
+	img {
+		min-width: 130%;
+		// border: 5px solid #fafafa;
+		drop-shadow: -8px -8px 24px 0 #FFFFFF
+		8px 8px 24px 0 #AEAEC0 40%;
+	}
+
+	.left {
+		// margin-left: 50%
+	}
+}	
+
+
 }
