--- a/css/main.scss
+++ b/css/main.scss
@@ -655,12 +655,12 @@ footer {
 	display: none;
 }
 @media screen and (max-width: 768px) {
-	// .inner-cursor {
-	// 	display:none;
-	// }
-	// .outer-cursor {
-	// 	display: none;
-	// }
+	.inner-cursor {
+		display:none;
+	}
+	.outer-cursor {
+		display: none;
+	}
 
 .intro {
 	h1 {
