--- a/css/main.css
+++ b/css/main.css
@@ -652,6 +652,12 @@ footer i {
 }
 
 @media screen and (max-width: 768px) {
+  .inner-cursor {
+    display: none;
+  }
+  .outer-cursor {
+    display: none;
+  }
   .intro h1 {
     font-size: 30px;
     margin-bottom: -40px;
