scroll bug fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -662,15 +662,15 @@ footer {
 
 	body {
 		padding: 40px 20px;
-		overflow: hidden;
+		
 	}
 
-	// .inner-cursor {
-	// 	display:none;
-	// }
-	// .outer-cursor {
-	// 	display: none;
-	// }
+	.inner-cursor {
+		display:none;
+	}
+	.outer-cursor {
+		display: none;
+	}
 
 
 	.intro {
