--- a/css/main.css
+++ b/css/main.css
@@ -654,7 +654,12 @@ footer i {
 @media screen and (max-width: 768px) {
   body {
     padding: 40px 20px;
-    overflow: hidden;
+  }
+  .inner-cursor {
+    display: none;
+  }
+  .outer-cursor {
+    display: none;
   }
   .intro h1 {
     font-size: 30px;
